revert: do not update deprecated methods code